--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "spatie/laravel-medialibrary": "^6.0.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
